# vino

./: .gitignore  AGENTS.md  LICENSE  METHOD.md  README.md  REPRODUCE.md  environment.yml  pyproject.toml  pytest.ini  setup.py
.ai/scripts/: preview_sbatch.sh  repo_health.sh  run_tests_fast.sh
.claude/: settings.json
configs/data/: bbbp.yaml  bbbp_full.yaml  esol.yaml  molhiv.yaml  synthetic_tiny.yaml
configs/experiments/: ablation_bbbp.yaml  bbbp_debug_tiny.yaml  bbbp_debug_tiny_patchalign.yaml  bbbp_debug_tiny_residual_stem.yaml  bbbp_debug_tiny_resize.yaml  bbbp_finetune.yaml  bbbp_finetune_vits16plus.yaml  bbbp_frozen.yaml  bbbp_frozen_vits16.yaml  bbbp_full_debug_tiny.yaml  bbbp_full_patchalign_vits16.yaml  (+9 more)
sbatch/: build_bbbp_images.sbatch  build_molhiv_images.sbatch  run_bbbp_frozen_ablation_suite.sbatch  smoke_synthetic.sbatch  sweep_bbbp_ablation.sbatch  train_bbbp_dino_interface_3seeds.sbatch  train_bbbp_dino_interface_smoke.sbatch  train_bbbp_finetune_vits16plus.sbatch  train_bbbp_frozen_vits16.sbatch  train_bbbp_full_dino_resize.sbatch  train_bbbp_full_dino_resize_5seeds.sbatch  train_bbbp_full_tiny.sbatch  train_bbbp_full_tiny_stratified.sbatch  train_molhiv_finetune_vits16plus.sbatch  train_molhiv_frozen_vits16.sbatch
scripts/: benchmark.py  build_graph_images.py  collect_results.py  compare_dino_input_views.py  debug_single_batch.py  download_dinov3.py  evaluate.py  inspect_graph_image.py  make_bbbp_frozen_ablation_configs.py  make_stratified_cache_split.py  summarize_results.py  train.py  visualize_graph_image_channels.py
tests/: conftest.py
(+85 files in other folders)
